--- a/css/main.css
+++ b/css/main.css
@@ -29,15 +29,31 @@ main {
   margin: 30px 0 10px 0;
 }
 
+.socialNetworksTable{
+  width: 30%;
+}
+
 .socialNetworksTable ul{
   display: flex;
   flex-direction: row;
-  font-size: 3rem;
+  justify-content: space-between;
+  align-items: center;
   list-style-type: none;
+  width: 100%;
 }
+.socialNetworksTable ul li{
+  flex: 1;
+  padding-right:3%;
+}
+
 .teamTable ul{
   font-size: 3rem;
   list-style-type: none;
+  color:#34516c;
+
+}
+.teamTable ul h1{
+  font-size: 3rem;
 }
 .frontPage p {
   font-size: 1.7rem;
@@ -74,7 +90,16 @@ main {
   .frontPage p {
     font-size: 1.8rem;
   }
+  .teamTable ul{
+    font-size: 2rem;
+    color:#34516c;
+
+  }
+  .teamTable ul h1{
+    font-size: 2rem;
+  }
 }
+
 
 @media only screen and (max-width: 768px) {
   .frontPage h1 {
@@ -82,6 +107,12 @@ main {
   }
 
   .frontPage p {
+    font-size: 1.5rem;
+  }
+  .teamTable ul{
+    font-size: 1.5rem;
+  }
+  .teamTable ul h1{
     font-size: 1.5rem;
   }
 
@@ -94,5 +125,5 @@ footer {
   display: flex;
   position: static;
   justify-content: space-between;
-  padding: 45px 2%;
+  padding: 15px 2%;
 }
